tests/ui/struct_unknown_field.stderr
Error [E0302]: `Point` has no field `y`
  --> tests/ui/struct_unknown_field.lex:7:13
    |
  7 |     print(p.y);
    |             ^
 Why: field access only works on names declared in the struct
 Fix: did you mean `x`?
